--- a/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/99_output.conf
+++ b/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/99_output.conf
@@ -8,4 +8,10 @@ output {
       # template_overwrite => true
     }
   }
+  if [application] == "ids" {
+	 elasticsearch {
+	 	hosts => ["elasticsearch:9200"]
+		index => "ids-%{+YYYY.MM.dd}"
+	  }
+  }
 }
