--- a/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/60_ids-pipeline.conf
+++ b/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/60_ids-pipeline.conf
@@ -1,9 +1,8 @@
 filter {
     if [application] == "ids" {
 	    csv {
-		    separator => ","
-			    skip_header => "true"
-			    columns => ["timestamp","tank_liquidlevel","tank_upperbound","tank_lowerbound","flowlevel","sensor2_thresh","bottle_liquidlevel","bottle_upperbound","bottle_lowerbound","motor_status","traffic_type"]
+                	separator => ","
+                        columns => [" ","timestamp","tank_liquidlevel","tank_upperbound","tank_lowerbound","flowlevel","sensor2_thresh","bottle_liquidlevel","bottle_upperbound","bottle_lowerbound","motor_status","traffic_type"]
 	    }
     }
 }
