--- a/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/99_output.conf
+++ b/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/99_output.conf
@@ -11,7 +11,7 @@ output {
   if [application] == "ids" {
 	 elasticsearch {
 	 	hosts => ["elasticsearch:9200"]
-		index => "ids-%{+YYYY.MM.dd}"
+		index => "idsr-%{+YYYY.MM.dd}"
 	  }
   }
 }
