--- a/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/60_ids-pipeline.conf
+++ b/DigitalTwin-SIEM-integration/deployments/docker/conf/logstash/conf.d/60_ids-pipeline.conf
@@ -2,7 +2,7 @@ filter {
     if [application] == "ids" {
 	    csv {
                 	separator => ","
-                        columns => [" ","timestamp","tank_liquidlevel","tank_upperbound","tank_lowerbound","flowlevel","sensor2_thresh","bottle_liquidlevel","bottle_upperbound","bottle_lowerbound","motor_status","class"]
+                        columns => [" ","timestamp","tank_liquidlevel","flowlevel","bottle_liquidlevel","motor_status","class"]
 	    }
     }
 }
